add arrow object (buggy)

--- a/pages/index.html
+++ b/pages/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
 	<title>Dependency Relationship</title>
 	<link rel="stylesheet" type="text/css" href="css/dependency.css">
 </head>
@@ -22,6 +23,7 @@
 </div>
 
 <script src="scripts/columnManager.js"></script>
+<script src="scripts/arrow.js"></script>
 <script src="scripts/item.js"></script>
 <script src="scripts/main.js"></script>
 <script src="scripts/filter.js"></script>
