--- a/pages/index.html
+++ b/pages/index.html
@@ -17,6 +17,7 @@
 	<details><summary>Required by (<span id="reqByNb"></span>)</summary><ul id="requiredBy"></ul></details>
 </div>
 
+<script src="scripts/item.js"></script>
 <script src="scripts/main.js"></script>
 <script src="scripts/filter.js"></script>
 <script src="scripts/details.js"></script>
