add text in box

--- a/pages/index.html
+++ b/pages/index.html
@@ -7,7 +7,7 @@
 <body>
 <svg id="drawArea" xmlns="http://www.w3.org/2000/svg"></svg>
 <div id="filterArea">
-	<input id="search" placeholder="search" list="itemsDataList">
+	<input id="search" placeholder="search" list="itemsDataList" autocomplete="off">
 	<button id="filterButton">F</button>
 	<datalist id="itemsDataList"></datalist>
 </div>
