add arrows for boxes

--- a/pages/index.html
+++ b/pages/index.html
@@ -5,7 +5,10 @@
 	<link rel="stylesheet" type="text/css" href="css/dependency.css">
 </head>
 <body>
-<svg id="drawArea" xmlns="http://www.w3.org/2000/svg"></svg>
+<svg id="drawArea" xmlns="http://www.w3.org/2000/svg">
+    <g class="arrows"></g>
+    <g class="boxes"></g>
+</svg>
 <div id="filterArea">
 	<input id="search" placeholder="search" list="itemsDataList" autocomplete="off">
 	<button id="filterButton">F</button>
