--- a/pages/index.html
+++ b/pages/index.html
@@ -7,6 +7,7 @@
 <body>
 <svg id="drawArea" xmlns="http://www.w3.org/2000/svg">
     <g class="arrows"></g>
+    <g class="arrows-highlight"></g>
     <g class="boxes"></g>
 </svg>
 <div id="filterArea">
@@ -20,7 +21,7 @@
 	<details><summary>Required by (<span id="reqByNb"></span>)</summary><ul id="requiredBy"></ul></details>
 </div>
 
-<script src="scripts/columnItems.js"></script>
+<script src="scripts/columnManager.js"></script>
 <script src="scripts/item.js"></script>
 <script src="scripts/main.js"></script>
 <script src="scripts/filter.js"></script>
