allow to change project

--- a/pages/index.html
+++ b/pages/index.html
@@ -26,6 +26,9 @@
         <button id="watchCode"><span class="fa fa-file-code-o"></span></button>
     </footer>
 </div>
+<div id="confSelectArea">
+    <select id="confSelect" title="Change configuration"></select>
+</div>
 
 <script src="scripts/columnManager.js"></script>
 <script src="scripts/arrow.js"></script>
