Allow to change color of types

--- a/pages/index.html
+++ b/pages/index.html
@@ -40,12 +40,22 @@
     <select id="confSelect" title="Change configuration"></select>
 </div>
 
+<dialog id="dialogTypeColor">
+    <header id="TypeTitle"></header>
+    <label>Color (for text and border): <input type="color" id="inputTypeColor"></label>
+    <label>Background color: <input type="color" id="inputTypeBgColor"></label>
+    <menu>
+        <button id="cancelTypeColor">Cancel</button>
+        <button id="closeTypeColor">Apply</button>
+    </menu>
+</dialog>
+
 <script src="scripts/columnManager.js"></script>
 <script src="scripts/arrow.js"></script>
 <script src="scripts/item.js"></script>
-<script src="scripts/main.js"></script>
 <script src="scripts/filter.js"></script>
 <script src="scripts/details.js"></script>
 <script src="scripts/svg.js"></script>
+<script src="scripts/main.js"></script>
 </body>
 </html>
