display label instead of id and manage parse data

--- a/pages/index.html
+++ b/pages/index.html
@@ -18,7 +18,10 @@
 	<datalist id="itemsDataList"></datalist>
 </div>
 <div data-tab="details" class="tabContent">
-	<header><span id="detailsTitle">Bloc title</span></header>
+	<header>
+        <h3><span id="detailsTitle">Bloc label</span></h3>
+        <h5><span id="detailsSubtitle">Bloc id</span></h5>
+    </header>
     <details><summary>Dependencies (<span id="depNb"></span>)</summary><ul id="dependencies"></ul></details>
     <details><summary>Required by (<span id="reqByNb"></span>)</summary><ul id="requiredBy"></ul></details>
     <br>
