start work about displaying code

--- a/pages/index.html
+++ b/pages/index.html
@@ -53,6 +53,8 @@
     </menu>
 </dialog>
 
+<script src="libs/aesjs.js"></script>
+<script src="scripts/tools.js"></script>
 <script src="scripts/columnManager.js"></script>
 <script src="scripts/arrow.js"></script>
 <script src="scripts/item.js"></script>
