allow to write file (without ciphering)

--- a/pages/index.html
+++ b/pages/index.html
@@ -58,6 +58,12 @@
     </menu>
 </dialog>
 
+<div class="notification">
+    <header></header>
+    <p></p>
+    <button>&times;</button>
+</div>
+
 <script src="libs/aesjs.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.8/ace.js"></script>
 <script src="scripts/tools.js"></script>
