--- a/pages/index2.html
+++ b/pages/index2.html
@@ -7,18 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="css/dependency2.css">
 </head>
 <body>
-<!--
 
-<dialog id="dialogTypeColor">
-    <header id="TypeTitle"></header>
-    <label>Color (for text and border): <input type="color" id="inputTypeColor"></label>
-    <label>Background color: <input type="color" id="inputTypeBgColor"></label>
-    <menu>
-        <button id="cancelTypeColor">Cancel</button>
-        <button id="closeTypeColor">Apply</button>
-    </menu>
-</dialog>
--->
 <section id="appDependencyWatcher">
     Application is loading
     <progress></progress>
@@ -32,7 +21,7 @@
 
 <!-- load tools -->
 <script src="scripts/tools.js"></script>
-<script src="data/data.js"></script>
+<script src="scripts/virtualSVG.js"></script>
 
 <!-- load vues -->
 <script src="vues/columns.js"></script>
@@ -42,9 +31,5 @@
 <script src="vues/svg.js"></script>
 <script src="vues/main.js"></script>
 
-<!-- <script src="scripts/columnManager.js"></script> -->
-<!-- <script src="scripts/arrow.js"></script> -->
-<!-- <script src="scripts/item.js"></script> -->
-<!-- <script src="scripts/svg.js"></script> -->
 </body>
 </html>
