add filters rules and give how many file match

--- a/pages/index2.html
+++ b/pages/index2.html
@@ -9,8 +9,10 @@
 <body>
 
 <section id="appDependencyWatcher">
-    Application is loading
-    <progress></progress>
+    <dependency-watcher>
+        Application is loading
+        <progress></progress>
+    </dependency-watcher>
 </section>
 <aside id="notification"></aside>
 
