--- a/pages/index2.html
+++ b/pages/index2.html
@@ -19,7 +19,7 @@
 <!-- load external libs -->
 <script src="libs/vue.js"></script>
 <script src="libs/aesjs.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.8/ace.js"></script>
+<script src="libs/ace/ace.js"></script>
 
 <!-- load tools -->
 <script src="scripts/tools.js"></script>
