try to add a worker solution

--- a/pages/index2.html
+++ b/pages/index2.html
@@ -23,6 +23,7 @@
 
 <!-- load tools -->
 <script src="scripts/tools.js"></script>
+<script src="scripts/workerVirtualSVG.js"></script>
 <script src="scripts/virtualSVG.js"></script>
 
 <!-- load vues -->
