--- a/pages/index.html
+++ b/pages/index.html
@@ -1,79 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<meta charset="utf-8">
-    <title>Dependency Relationship</title>
-    <link rel="stylesheet" type="text/css" href="libs/font-awesome/css/font-awesome.min.css">
-	<link rel="stylesheet" type="text/css" href="css/dependency.css">
-</head>
-<body>
-<svg id="drawArea" class="main-page active" xmlns="http://www.w3.org/2000/svg">
-    <g class="arrows"></g>
-    <g class="arrows-highlight"></g>
-    <g class="boxes"></g>
-</svg>
-<div id="codeArea" class="main-page">
-    <button class="close-code">&times;</button>
-    <button class="save-code">Save</button>
-    <div id="codeFile"></div>
-</div>
-<div id="filterArea">
-	<input id="search" placeholder="search" list="itemsDataList" autocomplete="off">
-	<button id="filterButton"><span class="fa fa-filter"></span></button>
-	<datalist id="itemsDataList"></datalist>
-</div>
-<div data-tab="details" class="tabContent">
-	<header>
-        <h3><span id="detailsTitle">Bloc label</span></h3>
-        <h5><span id="detailsSubtitle">Bloc id</span></h5>
-    </header>
-    <details><summary>Dependencies (<span id="depNb"></span>)</summary><ul id="dependencies"></ul></details>
-    <details><summary>Required by (<span id="reqByNb"></span>)</summary><ul id="requiredBy"></ul></details>
-    <br>
-    <footer>
-        <button id="watchCode"><span class="fa fa-file-code-o"></span></button>
-    </footer>
-</div>
-<div class="tabContent" data-tab="groups">
-    <header>Groups</header>
-    <div id="groupDetails"></div>
-</div>
-<footer id="tabsSelection">
-    <ul>
-        <li data-tab="details">Details</li>
-        <li data-tab="groups">Groups</li>
-    </ul>
-</footer>
-<div id="confSelectArea">
-    <select id="confSelect" title="Change configuration"></select>
-</div>
-
-<dialog id="dialogTypeColor">
-    <header id="TypeTitle"></header>
-    <label>Color (for text and border): <input type="color" id="inputTypeColor"></label>
-    <label>Background color: <input type="color" id="inputTypeBgColor"></label>
-    <menu>
-        <button id="cancelTypeColor">Cancel</button>
-        <button id="closeTypeColor">Apply</button>
-    </menu>
-</dialog>
-
-<div class="notification">
-    <header></header>
-    <p></p>
-    <button>&times;</button>
-</div>
-
-<script src="libs/aesjs.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.8/ace.js"></script>
-<script src="scripts/tools.js"></script>
-<script src="scripts/columnManager.js"></script>
-<script src="scripts/arrow.js"></script>
-<script src="scripts/item.js"></script>
-<script src="scripts/filter.js"></script>
-<script src="scripts/details.js"></script>
-<script src="scripts/code.js"></script>
-<script src="scripts/svg.js"></script>
-<script src="scripts/main.js"></script>
-</body>
-</html>
+index2.html
