add algo to match relation between 2 files

--- a/pages/index2.html
+++ b/pages/index2.html
@@ -24,6 +24,7 @@
 <!-- load tools -->
 <script src="scripts/tools.js"></script>
 <script src="scripts/virtualSVG.js"></script>
+<script src="scripts/shortestPath.js"></script>
 
 <!-- load vues -->
 <script src="vues/filter.js"></script>
