improve file architecture (using modules)

--- a/pages/index2.html
+++ b/pages/index2.html
@@ -20,17 +20,8 @@
 <script src="libs/vue.js"></script>
 <script src="libs/ace/ace.js"></script>
 
-<!-- load tools -->
-<script src="scripts/tools.js"></script>
-<script src="scripts/virtualSVG.js"></script>
-<script src="scripts/shortestPath.js"></script>
-
 <!-- load vues -->
-<script src="vues/filter.js"></script>
-<script src="vues/details.js"></script>
-<script src="vues/code.js"></script>
-<script src="vues/svg.js"></script>
-<script src="vues/main.js"></script>
+<script src="vues/main.js" type="module"></script>
 
 </body>
 </html>
