create a dialog to retrieve the password

--- a/pages/index2.html
+++ b/pages/index2.html
@@ -15,6 +15,7 @@
     </dependency-watcher>
 </section>
 <aside id="notification"></aside>
+<aside id="passwordDialog"></aside>
 
 <!-- load external libs -->
 <script src="libs/vue.js"></script>
